@@ -6,6 +6,7 @@ Changelog
 
 - Review view: Provide titles for accordion boxes and contained links so that
   zotero metadata string is not visible. #FLOW-444
+- Support for multipart titles. #FLOW-520
 
 
 4.4.2 (2018-12-12)
